---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
    - Bumped minimum base game version to 1.1.107.
    - Bumped Advanced Artillery Remotes Continued to latest version (verbose logging is now off by default).
    - Bumped Automatic Train Painter to latest version.
    - Bumped Big Light to latest version.
    - Bumped Blueprint Signals (continued) to latest version.
    - Bumped Blueprint Tools to latest version.
    - Bumped Factory Planner to latest version. Mod settings can no longer be set via modpack (default timescale).
    - Bumped Ghost Counter to latest version.
    - Bumped Bottleneck Lite to latest version.
    - Bumped Color Coded Planners to latest version.
    - Bumped Construction Planner Continued to latest version.
    - Bumped Cursor Enhancements to latest version.
    - Bumped Editor Extensions to latest version.
    - Enable use of artillery cluster remote for singular shots.
    - Modpack controls configuration for Blueprint Tools. SHIFT + arrows for nudging the blueprint, CONTROL + arrows for nudging blueprint grid, and CONTROL + SHIFT + arrow for nudging blueprint book grid.
    - Modpack controls configuration for Cursor Enhancements. Quick craft key binding is disabled (Crafting Tools provides for better quantity control).
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-07-26
  Features:
    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")