@@ -28,15 +28,15 @@
         "EditorExtensions >= 2.2.4",
         "EnableResearchQueue >= 1.0.4",
         "even-distribution >= 1.0.10",
-        "extended-descriptions >= 1.0.16",
+        "extended-descriptions >= 1.2.3",
         "factoryplanner >= 1.1.78",
-        "FactorySearch >= 1.8.0",
-        "far-reach >= 1.1.2",
+        "FactorySearch >= 1.11.1",
+        "far-reach >= 1.1.3",
         "Fill4Me >= 0.10.0",
         "FluidWagonColorMask >= 1.1.0",
         "ghost-counter >= 1.2.1",
-        "Gun_Turret_Alerts >= 1.1.9",
-        "Kux-CraftingTools >= 2.0.2",
+        "Gun_Turret_Alerts >= 1.1.11",
+        "Kux-CraftingTools >= 2.2.0",
         "lo-remote-constant >= 1.0.0",
         "manual-inventory-sort >= 2.2.5",
         "Milestones >= 1.3.4",
